--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "phpoffice/phpspreadsheet": "*",
         "yajra/laravel-datatables": "10.0"
     },
     "require-dev": {
