--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "phpoffice/phpspreadsheet": "*",
+        "tymon/jwt-auth": "2.1.1",
         "yajra/laravel-datatables": "10.0"
     },
     "require-dev": {
